--- a/index.html
+++ b/index.html
@@ -70,6 +70,47 @@
             </li>
           </ul>
         </div>
+        <div class="contact-info skills">
+          <h3 class="title">Skills</h3>
+          <ul>
+            <li>
+              <span class="text">Python</span>
+              <span class="percent">
+                <div style="width: 90%"></div>
+              </span>
+            </li>
+            <li>
+              <span class="text">C/C++</span>
+              <span class="percent">
+                <div style="width: 90%"></div>
+              </span>
+            </li>
+            <li>
+              <span class="text">Java</span>
+              <span class="percent">
+                <div style="width: 60%"></div>
+              </span>
+            </li>
+            <li>
+              <span class="text">Tensorflow</span>
+              <span class="percent">
+                <div style="width: 70%"></div>
+              </span>
+            </li>
+            <li>
+              <span class="text">NLP, Computer Vision</span>
+              <span class="percent">
+                <div style="width: 75%"></div>
+              </span>
+            </li>
+            <li>
+              <span class="text">ReactJS</span>
+              <span class="percent">
+                <div style="width: 50%"></div>
+              </span>
+            </li>
+          </ul>
+        </div>
       </div>
       <div class="right_side"></div>
     </div>
