--- a/index.html
+++ b/index.html
@@ -112,7 +112,38 @@
           </ul>
         </div>
       </div>
-      <div class="right_side"></div>
+      <div class="right_side">
+        <div class="education">
+          <h2 class="title">Education</h2>
+          <div class="education-data">
+            <div class="year">2017 - 2021</div>
+            <div class="content">
+              <h3 class="content-title">
+                Shahjalal University of Science & Technology
+              </h3>
+              <p>BSc. in Computer Science and engineering</p>
+            </div>
+          </div>
+          <div class="education-data">
+            <div class="year">2014 - 2016</div>
+            <div class="content">
+              <h3 class="content-title">
+                SAARC International College, Bangladesh
+              </h3>
+              <p>Higher Secondary School Certificate (HSC)</p>
+            </div>
+          </div>
+          <div class="education-data">
+            <div class="year">2009 - 2014</div>
+            <div class="content">
+              <h3 class="content-title">
+                Amberkhana Girls' School & College, Sylhet
+              </h3>
+              <p>Secondary School Certificate (SSC)</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
