add projects and thesis

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </div>
       <div class="right_side">
-        <div class="education">
+        <div class="block">
           <h2 class="title">Education</h2>
           <div class="education-data">
             <div class="year">2017 - 2021</div>
@@ -142,6 +142,68 @@
               <p>Secondary School Certificate (SSC)</p>
             </div>
           </div>
+        </div>
+        <div class="block">
+          <h2 class="title">Projects</h2>
+          <ul>
+            <li class="item">
+              <h3>Duplicate Finder (Python, Trax)</h3>
+              <p>
+                A Siamese network model trained on Quora question dataset which
+                detects duplicates with an F1 score around 80%. It consists of
+                two parallel networks each containing Embedding layers and
+                multiple LSTM layers.
+              </p>
+            </li>
+            <li class="item">
+              <h3>Home (Django, PostgreSQL)</h3>
+              <p>
+                A real estate web app for property listing where realtors can
+                add properties and people can query with multiple filters.
+              </p>
+            </li>
+            <li class="item">
+              <h3>iTranslator (Android, OCR)</h3>
+              <p>
+                An android app that can extract English text from image and uses
+                text-to-speech to read them aloud.
+              </p>
+            </li>
+            <li class="item">
+              <h3>KitKat (Android, Socket)</h3>
+              <p>
+                An android P2P chatting app with basic chatting and text file
+                sharing capabilities. Only works with users on same WiFi
+                network.
+              </p>
+            </li>
+            <li class="item">
+              <h3>Exam Management System (ReactJS)</h3>
+              <p>
+                A website where exams can be taken online, the teachers can take
+                exams, update details of the exams and assign assignments and
+                the students can give exams, submit assignments, and can see the
+                dues and their details.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="block">
+          <h2 class="title">Thesis</h2>
+          <ul>
+            <li class="item">
+              <h3>
+                Sentimental Style Transfer in Text with Variational Autoencoder
+              </h3>
+              <p>
+                A probabilistic model using VAE and holistic discriminator to
+                transfer the style of texts while controlling the semantics.
+                (i.e., converting a paragraph to Shakespearian style). Primarily
+                working with Positive-Negative sentiments. Using Bengali
+                language.
+              </p>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
