add projects, thesis, others

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
           </div>
           <h2>
             Sneha Devi <br />
-            <span>Software Engineer</span>
+            <span>Junior Software Engineer</span> <br />
+            <h4>Dynamic Solutions Innovators</h4>
           </h2>
         </div>
         <div class="about-me">
@@ -54,19 +55,34 @@
               <span class="icon"
                 ><i class="fa fa-envelope" aria-hidden="true"></i
               ></span>
-              <span class="text">snehadevi105@gmail.com</span>
+              <span class="text">
+                <a href="mailto:snehadevi105@gmail.com" target="_blank">
+                  snehadevi105@gmail.com
+                </a>
+              </span>
             </li>
             <li>
               <span class="icon"
                 ><i class="fa fa-github" aria-hidden="true"></i
               ></span>
-              <span class="text">snehadevi|Github</span>
+              <span class="text">
+                <a href="https://github.com/snehadevi" target="_blank">
+                  snehadevi | Github
+                </a>
+              </span>
             </li>
             <li>
               <span class="icon"
                 ><i class="fa fa-linkedin-square" aria-hidden="true"></i>
               </span>
-              <span class="text">Sneha Devi|LinkedIn</span>
+              <span class="text">
+                <a
+                  href="https://www.linkedin.com/in/sneha-devi-442b5b207/"
+                  target="_blank"
+                >
+                  Sneha Devi | LinkedIn
+                </a>
+              </span>
             </li>
           </ul>
         </div>
@@ -115,8 +131,8 @@
       <div class="right_side">
         <div class="block">
           <h2 class="title">Education</h2>
-          <div class="education-data">
-            <div class="year">2017 - 2021</div>
+          <div class="data">
+            <div class="left">2017 - 2021</div>
             <div class="content">
               <h3 class="content-title">
                 Shahjalal University of Science & Technology
@@ -124,8 +140,8 @@
               <p>BSc. in Computer Science and engineering</p>
             </div>
           </div>
-          <div class="education-data">
-            <div class="year">2014 - 2016</div>
+          <div class="data">
+            <div class="left">2014 - 2016</div>
             <div class="content">
               <h3 class="content-title">
                 SAARC International College, Bangladesh
@@ -133,8 +149,8 @@
               <p>Higher Secondary School Certificate (HSC)</p>
             </div>
           </div>
-          <div class="education-data">
-            <div class="year">2009 - 2014</div>
+          <div class="data">
+            <div class="left">2009 - 2014</div>
             <div class="content">
               <h3 class="content-title">
                 Amberkhana Girls' School & College, Sylhet
@@ -202,6 +218,20 @@
                 working with Positive-Negative sentiments. Using Bengali
                 language.
               </p>
+            </li>
+          </ul>
+        </div>
+        <div class="block">
+          <h2 class="title">Others</h2>
+          <ul>
+            <li class="item">
+              <p>
+                Obtained 15+ certications and completed around 20 courses from
+                different MOOC sites like Coursera, Datacamp, Udemy etc.
+              </p>
+            </li>
+            <li class="item">
+              <p>Solved 150+ problems on dierent online judges.</p>
             </li>
           </ul>
         </div>
