--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <ul>
             <li class="item">
               <p>
-                Obtained 15+ certications and completed around 20 courses from
+                Obtained 15+ certifcations and completed around 20 courses from
                 different MOOC sites like Coursera, Datacamp, Udemy etc.
               </p>
             </li>
