--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h2>
             Sneha Devi <br />
             <span>Junior Software Engineer</span> <br />
-            <h4>Dynamic Solutions Innovators</h4>
+            <h4>Dynamic Solutions Innovators Ltd.</h4>
           </h2>
         </div>
         <div class="about-me">
