--- a/index.html
+++ b/index.html
@@ -134,27 +134,21 @@
           <div class="data">
             <div class="left">2017 - 2021</div>
             <div class="content">
-              <h3 class="content-title">
-                Shahjalal University of Science & Technology
-              </h3>
+              <h3>Shahjalal University of Science & Technology</h3>
               <p>BSc. in Computer Science and engineering</p>
             </div>
           </div>
           <div class="data">
             <div class="left">2014 - 2016</div>
             <div class="content">
-              <h3 class="content-title">
-                SAARC International College, Bangladesh
-              </h3>
+              <h3>SAARC International College, Bangladesh</h3>
               <p>Higher Secondary School Certificate (HSC)</p>
             </div>
           </div>
           <div class="data">
             <div class="left">2009 - 2014</div>
             <div class="content">
-              <h3 class="content-title">
-                Amberkhana Girls' School & College, Sylhet
-              </h3>
+              <h3>Amberkhana Girls' School & College, Sylhet</h3>
               <p>Secondary School Certificate (SSC)</p>
             </div>
           </div>
@@ -231,7 +225,7 @@
               </p>
             </li>
             <li class="item">
-              <p>Solved 150+ problems on dierent online judges.</p>
+              <p>Solved 150+ problems on different online judges.</p>
             </li>
           </ul>
         </div>
